Opened 9 years ago

Closed 9 years ago

Last modified 8 years ago

#12828 closed bug (fixed)

[Patch] haikudepot/model/PackageActionHandler.h: fix header guard spelling

Reported by: mt Owned by: stippi
Priority: normal Milestone: Unscheduled
Component: Applications/HaikuDepot Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Fix header guard spelling as clang point out.

/home/haiku/haiku/haiku/src/apps/haikudepot/model/PackageActionHandler.h:6:9: warning: 'PACKAGE_ACTION_HANDLER_H' is used as a header guard here, followed by #define of a different macro [-Wheader-guard]
#ifndef PACKAGE_ACTION_HANDLER_H
        ^~~~~~~~~~~~~~~~~~~~~~~~
/home/haiku/haiku/haiku/src/apps/haikudepot/model/PackageActionHandler.h:7:9: note: 'PACkAGE_ACTION_HANDLER_H' is defined here; did you mean 'PACKAGE_ACTION_HANDLER_H'?
#define PACkAGE_ACTION_HANDLER_H
        ^~~~~~~~~~~~~~~~~~~~~~~~
        PACKAGE_ACTION_HANDLER_H

Attachments (1)

0018-PackageActionHandler.h-fix-header-guard-spelling.patch (752 bytes ) - added by mt 9 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by mt, 9 years ago

patch: 01

comment:2 by pulkomandy, 9 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev50402.

comment:3 by stippi, 8 years ago

BTW, thanks pulkomandy for handling these patches!

Note: See TracTickets for help on using tickets.