PackageActionHandler.h: fix header guard spelling

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>
Ticket: #12828